--- a/_posts/2015-07-09-black-wildebeest.html
+++ b/_posts/2015-07-09-black-wildebeest.html
@@ -1,9 +1,9 @@
 ---
 layout: bovid
-categories: Aepycerotini
-binomial: Aepyceros_melampus
-commonname: impala
-img: impala.jpg
+categories: Alcelaphini
+binomial: Connochaetes_gnou
+commonname: Black Wildebeest
+img: black-wildebeest.jpg
 ---
 
 <div class="row uniform">
@@ -15,5 +15,5 @@ img: impala.jpg
 </div>
 
 <div class="row">
-  <div class="12u image"><img src='{{ site.base_url }}/images/bovids/{{ page.img }}'></div>
+  <div class="12u image"><img style='max-width:100%' src='{{ site.base_url }}/images/bovids/{{ page.img }}'></div>
 </div>
