--- a/_posts/2015-07-09-blue-wildebeest.html
+++ b/_posts/2015-07-09-blue-wildebeest.html
@@ -1,6 +1,6 @@
 ---
 layout: bovid
-categories: Alcelaphini Connochaetes
+categories: Alcelaphini
 binomial: Connochaetes_taurinus
 commonname: Blue Wildebeest
 img: blue-wildebeest.jpg
