--- a/_posts/2015-07-09-impala.html
+++ b/_posts/2015-07-09-impala.html
@@ -6,14 +6,4 @@ commonname: impala
 img: impala.jpg
 ---
 
-<div class="row uniform">
-  <div class="12u"><h2>{{page.commonname | capitalize}}</h2></div>
-</div>
-
-<div class="row">
-<div class="12u"><h3>{{page.binomial | replace:"_"," " }}</h3></div>
-</div>
-
-<div class="row">
-  <div class="12u image"><img src='{{ site.base_url }}/images/bovids/{{ page.img }}'></div>
-</div>
+{% include bovid-detail.html %}
