very basic css styling

--- a/search.html
+++ b/search.html
@@ -4,8 +4,8 @@ layout: thanks
 <input type="text" name="bovid" id="autocomplete"/>
 
 <div class="autocomplete-suggestions">
-    <div class="autocomplete-group"><strong></strong></div>
-    <div class="autocomplete-suggestion autocomplete-selected"></div>
+    <div class="autocomplete-suggestion"></div>
+    <div class="autocomplete-suggestion"></div>
     <div class="autocomplete-suggestion"></div>
     <div class="autocomplete-suggestion"></div>
 </div>
